--- a/img/form.css
+++ b/img/form.css
@@ -33,9 +33,11 @@ body {background-image: url(pexels-marta-dzedyshko-2067569.jpg);
     margin-top: 10%;
     
     
+    
 }
 .form {border-radius: 10px;
     background-color:aliceblue;
+    box-shadow: 4px 3px 2px 3px #3f3e3e;
     
 }
 .form input {border: 0.4px ;}
