--- a/img/form.css
+++ b/img/form.css
@@ -47,3 +47,12 @@ body {background-image: url(pexels-marta-dzedyshko-2067569.jpg);
     font-weight: bold;
     box-shadow: 3px 2px darkred;
 }
+
+
+@media (max-width:460px){
+
+    .formulario {width: 80%;
+
+
+    }
+}
